--- a/inhame.html
+++ b/inhame.html
@@ -25,22 +25,22 @@
     <main>
         <div class="container">
             <article id="principal">
-                <section>
+                <section id="selecionado">
                     <figure>
                         <img src="conteudo/pratos/fotos/04.jpg" alt="">
-                        <figcaption<p>Pernil suíno com molho de laranja e batatas ao murro</p></figcaption>
+                        <figcaption><p>Pernil suíno com molho de laranja e batatas ao murro</p></figcaption>
                     </figure>
                 </section>
-                <section>
+                <section id="topFive">
+                  <figure>
                     <img src="conteudo/pratos/fotos/04.jpg" alt="">
-                    <p>Pernil suíno com molho de laranja e batatas ao murro</p>
+                    <figcaption><p>Pernil suíno com molho de laranja e batatas ao murro</p></figcaption>
+                </figure>
                 </section> 
             </article>
 
             <article id="sobremesa">
                 <section>
-                    <img src="conteudo/pratos/fotos/04.jpg" alt="">
-                    <p>Pernil suíno com molho de laranja e batatas ao murro</p>
                 </section>
                 <section>
 
@@ -50,8 +50,6 @@
             
             <article id="acompanhamento">
                 <section>
-                    <img src="conteudo/pratos/fotos/04.jpg" alt="">
-                    <p>Pernil suíno com molho de laranja e batatas ao murro</p>
                 </section>
                 <section>
 
