Inclusão do menu, novo acerto do CSS

--- a/inhame.html
+++ b/inhame.html
@@ -11,13 +11,20 @@
   <body>
     <header>
       <nav>
-        <ul class="menu">
-          <li><a href="#"><img src="paginas/img/facebook_p.png" alt="" class="imagemMenu"/></a></li>
-          <li><a href="#"><img src="paginas/img/googleplus_p.png" alt="" class="imagemMenu"/></a></li>
-          <li><a href="#"><img src="paginas/img/instagran_p.png" alt="" class="imagemMenu"/></a></li>
-          <li><a href="#"><img src="paginas/img/printerest_p.png" alt="" class="imagemMenu"/></a></li>
-          <li><a href="#"><img src="paginas/img/snapchat_p.png" alt="" class="imagemMenu"/></a></li>
-          <li><a href="#"><img src="paginas/img/youtube_p.png" alt="" class="imagemMenu"/></a></li>
+        <div id="menu">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sobre o Autor</a></li>
+            <li><a href="#">Contato</a></li>
+          </ul>
+        </div>
+        <ul class="midias">
+          <li><a href="#"><img src="paginas/img/facebook_p.png" alt="" class="imagemMidia"/></a></li>
+          <li><a href="#"><img src="paginas/img/googleplus_p.png" alt="" class="imagemMidia"/></a></li>
+          <li><a href="#"><img src="paginas/img/instagran_p.png" alt="" class="imagemMidia"/></a></li>
+          <li><a href="#"><img src="paginas/img/printerest_p.png" alt="" class="imagemMidia"/></a></li>
+          <li><a href="#"><img src="paginas/img/snapchat_p.png" alt="" class="imagemMidia"/></a></li>
+          <li><a href="#"><img src="paginas/img/youtube_p.png" alt="" class="imagemMidia"/></a></li>
           <li><div id="pesquisa"><input type="text" name="txtPesquisa" id="txtPesquisa" /><input type="button" value="Ok!"/></div></li>
         </ul>
       </nav>
