--- a/inhame.html
+++ b/inhame.html
@@ -37,10 +37,44 @@
             <figcaption><p>Pernil suíno com molho de laranja e batatas ao murro</p>
             </figcaption>
           </figure>
-        </section>
-        <section id="topFive">
-          <p>Não deixe de experimentar também uma das 5 receitas mais visitadas do Site</p>
           <div>
+          <p>Ingredientes</p>
+            <p>
+              <ul>
+                <li>1 pernil suíno temperado Assa Fácil Sadia</li>
+                <li>500 gramas de batata bolinha</li>
+                <li>200 gramas de minicebola descascada</li>
+                <li>1/4 de xícara de chá de azeite</li>
+                <li>Sal a gosto</li>
+                <li>Pimenta-do-reino a gosto</li>
+                <li>Suco de 2 laranjas</li>
+                <li>1 colher de sopa de amido de milho</li>
+                <li>2 colheres de sopa de salsinha picada</li>
+                <li>Folhas de salsa a gosto</li>
+              </ul>
+            </p>
+          </div>
+          <div>
+            <p>Modo de Preparo</p>
+            <p>
+            <ol>
+              <li>Prepare o pernil temperado Assa Fácil Sadia de acordo com as instruções da embalagem.</li>
+              <li>Em uma assadeira média, coloque as batatas bolinha, as minicebolas, o azeite e tempere com sal e pimenta-do-reino.</li>
+              <li>Leve ao forno preaquecido a 180 graus Celsius por 25 minutos ou até que estejam cozidas e levemente douradas.</li>
+              <li>Retire do forno e, assim que as batatas esfriarem um pouco, dê murros com as mãos e reserve na própria assadeira.</li>
+              <li>Quando faltarem 15 minutos para o pernil ficar pronto, abra a embalagem, retire o líquido e o despeje em uma panela pequena.</li>
+              <li>Acrescente o suco de laranja, o amido de milho e misture com um batedor de arame.</li>
+              <li>Leve ao fogo médio, misture até que engrosse um pouco e, se necessário, tempere com sal e pimenta-do-reino.</li>
+              <li>Leve as batatas assadas com as minicebolas para aquecer no forno e retire quando o pernil ficar pronto.</li>
+              <li>Em uma travessa grande, coloque o pernil, as batatas ao murro, as minicebolas e finalize com a salsinha picada e as folhas de salsa.</li>
+              <li>Sirva com o molho de laranja.</li>
+            </ol>
+          </p>
+        </div>
+        </section>
+        <section >
+          <p>Não deixe de experimentar também uma das 5 receitas mais visitadas do Site</p>
+          <div id="topFive">
             <figure>
               <img src="conteudo/pratos/fotos/02.jpg" alt="">
               <figcaption><p>Arroz indiano</p></figcaption>
